--- a/lab01.ipynb
+++ b/lab01.ipynb
@@ -1829,6 +1829,31 @@
    "source": [
     "#### 7.\tEstudie si es posible hacer transformaciones en las variables categóricas para incluirlas en el PCA, ¿valdrá la pena?"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Si es posible transformar las variables categóricas de modo que puedan ser incluidas en el proceso de PCA, para ello es necesario codificar las variables de modo que puedan ser tratadas de la misma forma que las variables cuantitativas. Algunas de las principales técnicas de codificación son:\n",
+    "\n",
+    "* **Codificación one-hot:** Transformación esencial que crea variables binarias para cada categoría, indicando su presencia o ausencia.\n",
+    "* **Codificación ordinal:** Asignación de valores ordinales a las categorías, teniendo en cuenta el orden jerárquico.\n",
+    "* **Codificación de enteros:** Asignación de valores enteros a cada categoría.\n",
+    "* **Codificación de frecuencia:** Asignación de valores en función de la frecuencia de cada categoría en los datos.\n",
+    "\n",
+    "(Urrego, 2020)\n",
+    "<br/><br/>\n",
+    "Para el caso del conjunto de datos con el que estamos trabajando, las variables categóricas ya se encuentran codificadas de acuerdo con la codificación *one-hot*, por lo que no es necesario hacer transformaciones adicionales para incluirlas en el PCA.\n",
+    "<br/><br/>\n",
+    "Si vale la pena incluir las variables codificadas en el PCA, debido a que pueden presentar correlación con otras variables que no son inmediatamente aparentes en un análisis de correlación. Además, el PCA puede ser útil para descartar variables categóricas que no influyen significativamente en el resultado del modelo, lo cual no es tan fácil de determinar sin un análisis más minucioso de dichas variables."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Urrego, N. (2020, 18 de mayo). Codificación de variables categóricas: Técnicas y conceptos clave. Medium. Recuperado de https://nicolasurrego.medium.com/codificaci%C3%B3n-de-variables-categ%C3%B3ricas-t%C3%A9cnicas-y-conceptos-clave-bca17b6164b2"
+   ]
   }
  ],
  "metadata": {
