Added: Group members

--- a/lab01.ipynb
+++ b/lab01.ipynb
@@ -12,6 +12,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Grupo #4 - Integrantes:**\n",
+    "* Alejandro Ortega, 18248\n",
+    "* Alejandro Azurdia, 21242"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Ejercicios"
    ]
   },
