--- a/lab01.ipynb
+++ b/lab01.ipynb
@@ -2288,6 +2288,72 @@
     "plt.ylabel('Varianza Acumulada')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Componentes principales:\n",
+      "        Age  Number of sexual partners  First sexual intercourse  \\\n",
+      "0  0.453767                   0.199243                  0.063559   \n",
+      "1 -0.244424                  -0.019246                 -0.087170   \n",
+      "2 -0.415347                   0.245257                 -0.370182   \n",
+      "3 -0.097558                   0.388311                 -0.712178   \n",
+      "4  0.018058                  -0.203058                  0.021624   \n",
+      "5  0.166709                   0.806200                  0.345865   \n",
+      "6 -0.098554                   0.222002                  0.179622   \n",
+      "7  0.426449                  -0.042059                 -0.271731   \n",
+      "8  0.576412                  -0.080801                 -0.342301   \n",
+      "9  0.019546                   0.014902                 -0.027711   \n",
+      "\n",
+      "   Num of pregnancies  Smokes (years)  Smokes (packs/year)  \\\n",
+      "0            0.421964        0.490811             0.428741   \n",
+      "1           -0.177880       -0.017216            -0.029009   \n",
+      "2           -0.259462        0.416041             0.493461   \n",
+      "3            0.317010       -0.215619            -0.254482   \n",
+      "4            0.000283        0.033609             0.022009   \n",
+      "5           -0.072858       -0.154947            -0.141720   \n",
+      "6           -0.594837       -0.000700             0.095753   \n",
+      "7           -0.385957        0.531517            -0.546009   \n",
+      "8           -0.336990       -0.478132             0.422319   \n",
+      "9            0.028730       -0.054474             0.029298   \n",
+      "\n",
+      "   Hormonal Contraceptives (years)  IUD (years)  STDs (number)  \\\n",
+      "0                         0.207226     0.163860       0.196102   \n",
+      "1                        -0.155651    -0.071371       0.660367   \n",
+      "2                        -0.272556    -0.151240      -0.155843   \n",
+      "3                         0.201863     0.280591      -0.007153   \n",
+      "4                        -0.566589     0.796488      -0.026647   \n",
+      "5                        -0.384483    -0.070787      -0.012511   \n",
+      "6                         0.575230     0.461729       0.037898   \n",
+      "7                        -0.075873    -0.074314       0.017440   \n",
+      "8                        -0.106936    -0.091127      -0.013767   \n",
+      "9                        -0.029379    -0.005218       0.705921   \n",
+      "\n",
+      "   STDs: Number of diagnosis  \n",
+      "0                   0.198346  \n",
+      "1                   0.658865  \n",
+      "2                  -0.157923  \n",
+      "3                   0.034928  \n",
+      "4                  -0.015312  \n",
+      "5                   0.015236  \n",
+      "6                  -0.014783  \n",
+      "7                  -0.036783  \n",
+      "8                   0.059972  \n",
+      "9                  -0.703393  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Interpretación de los componentes\n",
+    "pca_components = pd.DataFrame(pca.components_, columns=variables_cuantitativas)\n",
+    "print(f'Componentes principales:\\n{pca_components}')"
+   ]
   }
  ],
  "metadata": {
