Updated: Format changes

--- a/lab01.ipynb
+++ b/lab01.ipynb
@@ -1868,7 +1868,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 8. Estudie si es conveniente hacer un Análisis de Componentes Principales. Recuerde que puede usar el índice KMO y el test de esfericidad de Bartlett. Realice un análisis de componentes principales con las variables numéricas, discuta los resultados e interprete los componentes."
+    "#### 8. Estudie si es conveniente hacer un Análisis de Componentes Principales. Recuerde que puede usar el índice KMO y el test de esfericidad de Bartlett. Realice un análisis de componentes principales con las variables numéricas, discuta los resultados e interprete los componentes."
    ]
   },
   {
@@ -2223,7 +2223,7 @@
    "source": [
     "El índice KMO, con un valor menor a 0.5 (es decir, nada cercano a 1), no sugiere que la realización del PCA sea adecuada. \n",
     "\n",
-    "El test de esfericidad de Barlett, con un valor de 0.0, sugiere que las varuables no están correlacionadas, por lo que se confirma que no es efectivo realizar el PCA. \n",
+    "El test de esfericidad de Barlett, con un valor de 0.0, sugiere que las variables no están correlacionadas, por lo que se confirma que no es efectivo realizar el PCA. \n",
     "\n",
     "Aun así, se realizará el PCA para poder mostrar los resultados. "
    ]
@@ -2354,6 +2354,14 @@
     "pca_components = pd.DataFrame(pca.components_, columns=variables_cuantitativas)\n",
     "print(f'Componentes principales:\\n{pca_components}')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 9. Obtenga reglas de asociación interesantes del dataset. Recuerde discretizar las variables numéricas. Genere reglas con diferentes niveles de confianza y soporte. Discuta los resultados. Si considera que debe eliminar variables porque son muy frecuentes y con eso puede obtener más insights de la generación de reglas, hágalo y discútalo."
+   ]
+  },
   }
  ],
  "metadata": {
