--- a/lab01.ipynb
+++ b/lab01.ipynb
@@ -2362,6 +2362,417 @@
     "#### 9. Obtenga reglas de asociación interesantes del dataset. Recuerde discretizar las variables numéricas. Genere reglas con diferentes niveles de confianza y soporte. Discuta los resultados. Si considera que debe eliminar variables porque son muy frecuentes y con eso puede obtener más insights de la generación de reglas, hágalo y discútalo."
    ]
   },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Smokes</th>\n",
+       "      <th>Hormonal Contraceptives</th>\n",
+       "      <th>IUD</th>\n",
+       "      <th>STDs</th>\n",
+       "      <th>STDs:condylomatosis</th>\n",
+       "      <th>STDs:cervical condylomatosis</th>\n",
+       "      <th>STDs:vaginal condylomatosis</th>\n",
+       "      <th>STDs:vulvo-perineal condylomatosis</th>\n",
+       "      <th>STDs:syphilis</th>\n",
+       "      <th>STDs:pelvic inflammatory disease</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Age_binned</th>\n",
+       "      <th>Number of sexual partners_binned</th>\n",
+       "      <th>First sexual intercourse_binned</th>\n",
+       "      <th>Num of pregnancies_binned</th>\n",
+       "      <th>Smokes (years)_binned</th>\n",
+       "      <th>Smokes (packs/year)_binned</th>\n",
+       "      <th>Hormonal Contraceptives (years)_binned</th>\n",
+       "      <th>IUD (years)_binned</th>\n",
+       "      <th>STDs (number)_binned</th>\n",
+       "      <th>STDs: Number of diagnosis_binned</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 34 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Smokes  Hormonal Contraceptives  IUD  STDs  STDs:condylomatosis  \\\n",
+       "0       0                        0    0     0                    0   \n",
+       "1       0                        0    0     0                    0   \n",
+       "3       1                        1    0     0                    0   \n",
+       "4       0                        1    0     0                    0   \n",
+       "5       0                        0    0     0                    0   \n",
+       "\n",
+       "   STDs:cervical condylomatosis  STDs:vaginal condylomatosis  \\\n",
+       "0                             0                            0   \n",
+       "1                             0                            0   \n",
+       "3                             0                            0   \n",
+       "4                             0                            0   \n",
+       "5                             0                            0   \n",
+       "\n",
+       "   STDs:vulvo-perineal condylomatosis  STDs:syphilis  \\\n",
+       "0                                   0              0   \n",
+       "1                                   0              0   \n",
+       "3                                   0              0   \n",
+       "4                                   0              0   \n",
+       "5                                   0              0   \n",
+       "\n",
+       "   STDs:pelvic inflammatory disease  ...  Age_binned  \\\n",
+       "0                                 0  ...           0   \n",
+       "1                                 0  ...           0   \n",
+       "3                                 0  ...           2   \n",
+       "4                                 0  ...           2   \n",
+       "5                                 0  ...           2   \n",
+       "\n",
+       "   Number of sexual partners_binned  First sexual intercourse_binned  \\\n",
+       "0                                 0                                1   \n",
+       "1                                 0                                0   \n",
+       "3                                 0                                1   \n",
+       "4                                 0                                2   \n",
+       "5                                 0                                2   \n",
+       "\n",
+       "   Num of pregnancies_binned  Smokes (years)_binned  \\\n",
+       "0                          0                      0   \n",
+       "1                          0                      0   \n",
+       "3                          1                      4   \n",
+       "4                          1                      0   \n",
+       "5                          0                      0   \n",
+       "\n",
+       "   Smokes (packs/year)_binned  Hormonal Contraceptives (years)_binned  \\\n",
+       "0                           0                                       0   \n",
+       "1                           0                                       0   \n",
+       "3                           4                                       0   \n",
+       "4                           0                                       3   \n",
+       "5                           0                                       0   \n",
+       "\n",
+       "   IUD (years)_binned  STDs (number)_binned  STDs: Number of diagnosis_binned  \n",
+       "0                   0                     0                                 0  \n",
+       "1                   0                     0                                 0  \n",
+       "3                   0                     0                                 0  \n",
+       "4                   0                     0                                 0  \n",
+       "5                   0                     0                                 0  \n",
+       "\n",
+       "[5 rows x 34 columns]"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Discretizar las variables numéricas usando binning\n",
+    "for var in variables_cuantitativas:\n",
+    "    df[f'{var}_binned'] = pd.cut(df[var], bins=5, labels=False)\n",
+    "\n",
+    "# Eliminar las variables numéricas originales\n",
+    "df_discretizado = df.drop(columns=variables_cuantitativas)\n",
+    "\n",
+    "# Conviritendo valores a 'int' para eliminar decimales\n",
+    "df_discretizado = df_discretizado.astype(int)\n",
+    "\n",
+    "df_discretizado.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convertir todas las columnas a tipo 'str'\n",
+    "df_discretizado = df_discretizado.applymap(str)\n",
+    "\n",
+    "# Convertir el DataFrame en una lista de listas para la minería de reglas\n",
+    "transactions = df_discretizado.values.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reglas con alta confianza:\n",
+      "   antecedents consequents  antecedent support  consequent support   support  \\\n",
+      "0          (0)         (1)            1.000000            0.943114  0.943114   \n",
+      "1          (1)         (0)            0.943114            1.000000  0.943114   \n",
+      "2          (2)         (0)            0.336826            1.000000  0.336826   \n",
+      "3          (3)         (0)            0.067365            1.000000  0.067365   \n",
+      "4          (2)         (1)            0.336826            0.943114  0.312874   \n",
+      "5          (3)         (1)            0.067365            0.943114  0.064371   \n",
+      "6       (0, 2)         (1)            0.336826            0.943114  0.312874   \n",
+      "7       (2, 1)         (0)            0.312874            1.000000  0.312874   \n",
+      "8          (2)      (0, 1)            0.336826            0.943114  0.312874   \n",
+      "9       (3, 0)         (1)            0.067365            0.943114  0.064371   \n",
+      "10      (3, 1)         (0)            0.064371            1.000000  0.064371   \n",
+      "11         (3)      (0, 1)            0.067365            0.943114  0.064371   \n",
+      "\n",
+      "    confidence      lift  leverage  conviction  zhangs_metric  \n",
+      "0     0.943114  1.000000  0.000000    1.000000       0.000000  \n",
+      "1     1.000000  1.000000  0.000000         inf       0.000000  \n",
+      "2     1.000000  1.000000  0.000000         inf       0.000000  \n",
+      "3     1.000000  1.000000  0.000000         inf       0.000000  \n",
+      "4     0.928889  0.984917 -0.004791    0.799963      -0.022571  \n",
+      "5     0.955556  1.013192  0.000838    1.279940       0.013961  \n",
+      "6     0.928889  0.984917 -0.004791    0.799963      -0.022571  \n",
+      "7     1.000000  1.000000  0.000000         inf       0.000000  \n",
+      "8     0.928889  0.984917 -0.004791    0.799963      -0.022571  \n",
+      "9     0.955556  1.013192  0.000838    1.279940       0.013961  \n",
+      "10    1.000000  1.000000  0.000000         inf       0.000000  \n",
+      "11    0.955556  1.013192  0.000838    1.279940       0.013961  \n",
+      "\n",
+      "Reglas con alto soporte:\n",
+      "  antecedents consequents  antecedent support  consequent support   support  \\\n",
+      "0         (0)         (1)            1.000000            0.943114  0.943114   \n",
+      "1         (1)         (0)            0.943114            1.000000  0.943114   \n",
+      "2         (2)         (0)            0.336826            1.000000  0.336826   \n",
+      "4         (2)         (1)            0.336826            0.943114  0.312874   \n",
+      "6      (0, 2)         (1)            0.336826            0.943114  0.312874   \n",
+      "7      (2, 1)         (0)            0.312874            1.000000  0.312874   \n",
+      "8         (2)      (0, 1)            0.336826            0.943114  0.312874   \n",
+      "\n",
+      "   confidence      lift  leverage  conviction  zhangs_metric  \n",
+      "0    0.943114  1.000000  0.000000    1.000000       0.000000  \n",
+      "1    1.000000  1.000000  0.000000         inf       0.000000  \n",
+      "2    1.000000  1.000000  0.000000         inf       0.000000  \n",
+      "4    0.928889  0.984917 -0.004791    0.799963      -0.022571  \n",
+      "6    0.928889  0.984917 -0.004791    0.799963      -0.022571  \n",
+      "7    1.000000  1.000000  0.000000         inf       0.000000  \n",
+      "8    0.928889  0.984917 -0.004791    0.799963      -0.022571  \n"
+     ]
+    }
+   ],
+   "source": [
+    "from mlxtend.preprocessing import TransactionEncoder\n",
+    "from mlxtend.frequent_patterns import apriori, association_rules\n",
+    "\n",
+    "# Convertir las transacciones a un DataFrame de One-Hot Encoding\n",
+    "te = TransactionEncoder()\n",
+    "te_ary = te.fit(transactions).transform(transactions)\n",
+    "df_onehot = pd.DataFrame(te_ary, columns=te.columns_)\n",
+    "\n",
+    "# Aplicar el algoritmo Apriori\n",
+    "frequent_itemsets = apriori(df_onehot, min_support=0.05, use_colnames=True)\n",
+    "\n",
+    "# Generar las reglas de asociación\n",
+    "rules = association_rules(frequent_itemsets, metric=\"confidence\", min_threshold=0.6)\n",
+    "\n",
+    "# Filtrar reglas por diferentes niveles de soporte y confianza\n",
+    "rules_high_confidence = rules[rules['confidence'] >= 0.8]\n",
+    "rules_high_support = rules[rules['support'] >= 0.1]\n",
+    "\n",
+    "# Mostrar las reglas más interesantes\n",
+    "print(\"Reglas con alta confianza:\")\n",
+    "print(rules_high_confidence)\n",
+    "\n",
+    "print(\"\\nReglas con alto soporte:\")\n",
+    "print(rules_high_support)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Variables más frecuentes:\n",
+      "0    668\n",
+      "1    630\n",
+      "2    225\n",
+      "3     45\n",
+      "4     26\n",
+      "dtype: int64\n",
+      "\n",
+      "Nuevas reglas después de eliminar variables frecuentes:\n",
+      "  antecedents consequents  antecedent support  consequent support   support  \\\n",
+      "0         (2)         (1)            0.336826            0.943114  0.312874   \n",
+      "1         (3)         (1)            0.067365            0.943114  0.064371   \n",
+      "\n",
+      "   confidence      lift  leverage  conviction  zhangs_metric  \n",
+      "0    0.928889  0.984917 -0.004791    0.799963      -0.022571  \n",
+      "1    0.955556  1.013192  0.000838    1.279940       0.013961  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Si hay variables muy frecuentes que no aportan valor, eliminarlas y volver a generar reglas\n",
+    "frequent_variables = df_onehot.sum().sort_values(ascending=False)\n",
+    "print(\"\\nVariables más frecuentes:\")\n",
+    "print(frequent_variables.head(10))\n",
+    "\n",
+    "# Eliminar las variables muy frecuentes si es necesario\n",
+    "variables_a_eliminar = frequent_variables.head(1).index\n",
+    "df_reducido = df_onehot.drop(columns=variables_a_eliminar)\n",
+    "\n",
+    "# Generar nuevas reglas con el dataset reducido\n",
+    "frequent_itemsets_reducido = apriori(df_reducido, min_support=0.05, use_colnames=True)\n",
+    "rules_reducido = association_rules(frequent_itemsets_reducido, metric=\"confidence\", min_threshold=0.6)\n",
+    "\n",
+    "# Mostrar las nuevas reglas\n",
+    "print(\"\\nNuevas reglas después de eliminar variables frecuentes:\")\n",
+    "print(rules_reducido)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Discusión\n",
+    "Al generar las reglas de asociación se observó que las reglas con mayores valores de confianza y soporte son aquellas que contienen las variables '0' y '1' presentando valores de 1.0 o cercanos a 1.0, esto indica que estas variables son bastante prevalentes en el conjunto de datos. Al analizar las variables más frecuentes podemos ver que la variable '0' está presente 668 veces en el conjunto de datos, en otras palabras, aparece el 100% de las veces en las filas del conjunto de datos.\n",
+    "\n",
+    "##### Eliminación de variables frecuentes\n",
+    "Procedemos a eliminar la variable '0' dado que está presente en la totalidad de observaciones del conjunto de datos de modo que domina las relaciones encontradas. Al hacerlo, podemos ver que resaltan las reglas '(2) => (3)' y '(3) => (1)'. Estas relaciones podrían reprenentar *insights* importantes con respecto a los factores que contribuyen al desarrollo del cáncer cervical que no habrían sido fácilmente visibles en el conjunto completo de datos."
+   ]
   }
  ],
  "metadata": {
